--- a/src/Analyzers/AspNetMigrator.Analyzers/Resources.resx
+++ b/src/Analyzers/AspNetMigrator.Analyzers/Resources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="HtmlStringDescription" xml:space="preserve">
+    <value>HtmlString, IHtmlString, and MvcHtmlString types should be replaced with Microsoft.AspNetCore.Html.HtmlString</value>
+  </data>
+  <data name="HtmlStringMessageFormat" xml:space="preserve">
+    <value>Identifier '{0}' should be replaced with Microsoft.AspNetCore.Html.HtmlString</value>
+  </data>
+  <data name="HtmlStringTitle" xml:space="preserve">
+    <value>HtmlString types should be replaced with Microsoft.AspNetCore.Html.HtmlString</value>
+  </data>
   <data name="UsingSystemWebDescription" xml:space="preserve">
     <value>ASP.NET Core projects should not reference System.Web or OWIN namespaces.</value>
     <comment>An optional longer localizable description of the diagnostic.</comment>
