--- a/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/CodeFixResources.resx
+++ b/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/CodeFixResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="HtmlStringTitle" xml:space="preserve">
+    <value>Replace with Microsoft.AspNetCore.Html.HtmlString</value>
+  </data>
   <data name="UsingSystemWebTitle" xml:space="preserve">
     <value>Remove using directive</value>
     <comment>The title of the code fix.</comment>
