--- a/src/Analyzers/AspNetMigrator.Analyzers/Resources.resx
+++ b/src/Analyzers/AspNetMigrator.Analyzers/Resources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="FilterDescription" xml:space="preserve">
+    <value>Filter-related types should come from the Microsoft.AspNetCore.Mvc.Filters namespace in ASP.NET Core</value>
+  </data>
+  <data name="FilterMessageFormat" xml:space="preserve">
+    <value>Identifier '{0}' should be replaced with '{1}'</value>
+  </data>
+  <data name="FilterTitle" xml:space="preserve">
+    <value>Filter types should be used from the Microsoft.AspNetCore.Mvc.Filters namespace</value>
+  </data>
   <data name="HtmlStringDescription" xml:space="preserve">
     <value>HtmlString, IHtmlString, and MvcHtmlString types should be replaced with Microsoft.AspNetCore.Html.HtmlString</value>
   </data>
