--- a/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/CodeFixResources.resx
+++ b/src/Analyzers/AspNetMigrator.Analyzers.CodeFixes/CodeFixResources.resx
@@ -126,6 +126,9 @@
   <data name="HttpContextCurrentTitle" xml:space="preserve">
     <value>Replace HttpContext.Current usage with an HttpContextAccessor-based solution</value>
   </data>
+  <data name="HttpContextIsDebuggingEnabled" xml:space="preserve">
+    <value>Replace IsDebuggingEnabled with System.Diagnostics.Debugger.IsAttached</value>
+  </data>
   <data name="ResultTypeTitle" xml:space="preserve">
     <value>Replace with ASP.NET Core result type</value>
   </data>
