--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CSharp.Analyzers/Resources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CSharp.Analyzers/Resources.resx
@@ -126,6 +126,15 @@
   <data name="AllowHtmlAttributeTitle" xml:space="preserve">
     <value>[AllowHtmlAttribute] should be removed</value>
   </data>
+  <data name="ApiControllerDescription" xml:space="preserve">
+    <value>'ApiController' should be replaced with 'Microsoft.AspNetCore.Mvc.Controller'</value>
+  </data>
+  <data name="ApiControllerMessageFormat" xml:space="preserve">
+    <value>'ApiController' should be replaced with 'Microsoft.AspNetCore.Mvc.Controller'</value>
+  </data>
+  <data name="ApiControllerTitle" xml:space="preserve">
+    <value>'ApiController' does not exist</value>
+  </data>
   <data name="BinaryFormatterUnsafeDeserializeDescription" xml:space="preserve">
     <value>'UnsafeDeserialize()' should be replaced with 'Deserialize()'.</value>
   </data>
