Add a codefixer to refactor HttpContext.Current
This adds an additional codefixer for HttpContext.Current that helps to
refactor its usage to instead use method injection. The codefixer will
update calling methods to pass in HttpContext.Current, which can be
called multiple times to move HttpContext.Current up the stack.

--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
@@ -144,6 +144,9 @@
   <data name="HttpContextIsDebuggingEnabled" xml:space="preserve">
     <value>Replace IsDebuggingEnabled with System.Diagnostics.Debugger.IsAttached</value>
   </data>
+  <data name="HttpContextRefactorTitle" xml:space="preserve">
+    <value>Pass HttpContext through method instead of via HttpContext.Current</value>
+  </data>
   <data name="ResultTypeTitle" xml:space="preserve">
     <value>Replace with ASP.NET Core result type</value>
   </data>
