Update based on PR feedback

--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
@@ -148,7 +148,7 @@
     <value>Replace with ASP.NET Core result type</value>
   </data>
   <data name="TypeUpgradeTitle" xml:space="preserve">
-    <value>Replace type with .NET Core type</value>
+    <value>Replace type</value>
   </data>
   <data name="UrlHelperTitle" xml:space="preserve">
     <value>Replace with ASP.NET Core URL helper type</value>
