Consolidate type upgrade analyzers into a single configurable analyzer (#540)
This consolidates all the analyzers derived from `IdentifierUpgradeAnalyzer` and replaces them with a single analyzer/code fix provider for identifying and updating all cases where a type name needs replaced with a more modern equivalent.

It also updates this new `TypeUpgradeAnalyzer` to read the types to be replaced dynamically from additional texts so that users can easily extend the mapping of types to be replaced (by including a .typemap file in their project, including a .typemap additional file in their extension, or by registering an `AdditionalText` file with in UA's DI container).

--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
@@ -153,6 +153,9 @@
   <data name="UnknownLanguage" xml:space="preserve">
     <value>Unknown language</value>
   </data>
+  <data name="TypeUpgradeTitle" xml:space="preserve">
+    <value>Replace type</value>
+  </data>
   <data name="UrlHelperTitle" xml:space="preserve">
     <value>Replace with ASP.NET Core URL helper type</value>
   </data>
