--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/LocalizedStrings.resx
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/LocalizedStrings.resx
@@ -117,10 +117,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddExtensionDetails" xml:space="preserve">
+    <value>Adding extension {Name} from {Source}</value>
+  </data>
+  <data name="AddExtensionFailed" xml:space="preserve">
+    <value>Could not find extension {Name} from {Source}</value>
+  </data>
+  <data name="AddExtensionSuccess" xml:space="preserve">
+    <value>Added extension {Name} from {Source}</value>
+  </data>
   <data name="ExtensionManagementName" xml:space="preserve">
     <value>Name of extension</value>
   </data>
   <data name="ExtensionManagementSource" xml:space="preserve">
     <value>Source of extension</value>
+  </data>
+  <data name="ListExtensionDetails" xml:space="preserve">
+    <value>Current extensions:</value>
+  </data>
+  <data name="ListExtensionItem" xml:space="preserve">
+    <value>{Name}: {Source}</value>
+  </data>
+  <data name="RemovingExtension" xml:space="preserve">
+    <value>Removing extension '{Name}'</value>
+  </data>
+  <data name="RemovingExtensionFailed" xml:space="preserve">
+    <value>Could not remove extension '{Name}'</value>
+  </data>
+  <data name="UpdateExtensionDetails" xml:space="preserve">
+    <value>Searching for updates for {Name}</value>
+  </data>
+  <data name="UpdateExtensionFailed" xml:space="preserve">
+    <value>Could not find an update for extension {Name}</value>
+  </data>
+  <data name="UpdateExtensionSuccess" xml:space="preserve">
+    <value>Found an update for {Name} to {Version}</value>
   </data>
 </root>
