Fix UA0013 resource strings

--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
@@ -121,7 +121,7 @@
     <value>This type is not supported on .NET Core/.NET 5+ and should be replaced with a modern equivalent.</value>
   </data>
   <data name="ApiAlertGenericMessageFormat" xml:space="preserve">
-    <value>{}</value>
+    <value>{0}</value>
   </data>
   <data name="ApiAlertGenericTitle" xml:space="preserve">
     <value>Replace unsupported API</value>
