--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/LocalizedStrings.resx
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/LocalizedStrings.resx
@@ -141,11 +141,17 @@
   <data name="ListExtensionItem" xml:space="preserve">
     <value>{Name}: {Source}</value>
   </data>
+  <data name="NonWindowsWarning" xml:space="preserve">
+    <value>This tool is not supported on non-Windows platforms due to dependencies on Visual Studio.</value>
+  </data>
   <data name="RemovingExtension" xml:space="preserve">
     <value>Removing extension '{Name}'</value>
   </data>
   <data name="RemovingExtensionFailed" xml:space="preserve">
     <value>Could not remove extension '{Name}'</value>
+  </data>
+  <data name="SurveyText" xml:space="preserve">
+    <value>We are interested in your feedback! Please use the following link to open a survey: https://aka.ms/DotNetUASurvey</value>
   </data>
   <data name="UpdateExtensionDetails" xml:space="preserve">
     <value>Searching for updates for {Name}</value>
@@ -155,5 +161,15 @@
   </data>
   <data name="UpdateExtensionSuccess" xml:space="preserve">
     <value>Found an update for {Name} to {Version}</value>
+  </data>
+  <data name="UpgradeAssistantHeader" xml:space="preserve">
+    <value>Microsoft .NET Upgrade Assistant v{0}</value>
+  </data>
+  <data name="UpgradeAssistantHeaderDetails" xml:space="preserve">
+    <value>Makes a best-effort attempt to upgrade .NET Framework projects to current, preview or LTS versions of .NET.
+ 
+This tool does not completely automate the upgrade process and it is expected that projects will have build errors after the tool runs. Manual changes will be required to complete the upgrade to .NET 5.
+
+This tool's purpose is to automate some of the 'routine' upgrade tasks such as changing project file formats and updating APIs with near-equivalents in the selected target framework. Analyzers added to the project will highlight the remaining changes needed after the tool runs.</value>
   </data>
 </root>
