--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ApiAlertGenericDescription" xml:space="preserve">
+    <value>This type is not supported on .NET Core/.NET 5+ and should be replaced with a modern equivalent.</value>
+  </data>
+  <data name="ApiAlertGenericMessageFormat" xml:space="preserve">
+    <value>{0}</value>
+  </data>
+  <data name="ApiAlertGenericTitle" xml:space="preserve">
+    <value>Replace unsupported API</value>
+  </data>
   <data name="AttributeUpgradeDescription" xml:space="preserve">
     <value>This attribute type is not supported on .NET Core/.NET 5+ and should be replaced with a modern equivalent.</value>
   </data>
