--- a/src/components/Microsoft.DotNet.UpgradeAssistant.MSBuild/LocalizedStrings.resx
+++ b/src/components/Microsoft.DotNet.UpgradeAssistant.MSBuild/LocalizedStrings.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="InvalidProjectError" xml:space="preserve">
-    <value>Could not load project. Please ensure the selected VS instance has the correct workloads installed for your projects. If Upgrade Assistant selected the incorrect VS version, please pass the argument --vs-path with the appropriate path.</value>
+    <value>Could not load project. Please ensure the selected VS instance has the correct workloads installed for your projects. If Upgrade Assistant selected the incorrect VS version, please pass the argument --vs-path with the appropriate path. You can see the Visual Studio instances searched by running with the --verbose flag.</value>
   </data>
 </root>
