Initial add member

--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
@@ -124,7 +124,7 @@
     <value>Add member {0} to abstraction {1}</value>
   </data>
   <data name="AdapterAddMemberTitle" xml:space="preserve">
-    <value>Add member to abstraction.</value>
+    <value>Add member to abstraction</value>
   </data>
   <data name="AdapterRefactorDescription" xml:space="preserve">
     <value>Refactor usage to another type.</value>
