--- a/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Resources.resx
+++ b/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Resources.resx
@@ -117,14 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DefFontMessage" xml:space="preserve">
+  <data name="DefaultFontMessage" xml:space="preserve">
     <value>Default font in Windows Forms has been changed from Microsoft Sans Serif to Seg Segoe UI, in order to change the default font use the API - Application.SetDefaultFont(Font font). For more details see here - https://devblogs.microsoft.com/dotnet/whats-new-in-windows-forms-in-net-6-0-preview-5/#application-wide-default-font.</value>
   </data>
   <data name="EnableVisualStylesLine" xml:space="preserve">
     <value>Application.EnableVisualStyles()</value>
   </data>
+  <data name="HighDPIConfiguration" xml:space="preserve">
+    <value>/configuration/System.Windows.Forms.ApplicationConfigurationSection</value>
+  </data>
+  <data name="HighDpiDefaultSetting" xml:space="preserve">
+    <value>SystemAware</value>
+  </data>
   <data name="HighDPIMessage" xml:space="preserve">
     <value>HighDpiMode needs to set in Main() instead of app.config or app.manifest - Application.SetHighDpiMode(HighDpiMode.&lt;setting&gt;). It is recommended to use SystemAware as the HighDpiMode option for better results.</value>
+  </data>
+  <data name="HighDpiSettingKey" xml:space="preserve">
+    <value>DpiAwareness</value>
   </data>
   <data name="HighDPISettingLine" xml:space="preserve">
     <value>Application.SetHighDpiMode(HighDpiMode.{0});</value>
