--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
@@ -135,26 +135,41 @@
   <data name="AdapterCallFactoryTitle" xml:space="preserve">
     <value>Call factory method</value>
   </data>
-  <data name="AdapterDescriptorTypeDescription" xml:space="preserve">
-    <value>Adapter descriptor must provide original type and abstraction type.</value>
+  <data name="AdapterDescriptorTypeAttributeDescription" xml:space="preserve">
+    <value>Adapter types must be attributes.</value>
   </data>
-  <data name="AdapterDescriptorTypeMessageFormat" xml:space="preserve">
-    <value>{0}</value>
+  <data name="AdapterDescriptorTypeAttributeMessageFormat" xml:space="preserve">
+    <value>Adapter type {0} must derive from attribute</value>
   </data>
-  <data name="AdapterDescriptorTypeMustBeAttribute" xml:space="preserve">
-    <value>Adapter descriptor must be an attribute.</value>
+  <data name="AdapterDescriptorTypeAttributeTitle" xml:space="preserve">
+    <value>Adapter types must be attributes</value>
   </data>
-  <data name="AdapterDescriptorTypeMustBeAType" xml:space="preserve">
-    <value>Descriptor parameters must be a type.</value>
+  <data name="AdapterDescriptorTypeConstructorCountDescription" xml:space="preserve">
+    <value>Adapter types must have correct constructor count.</value>
   </data>
-  <data name="AdapterDescriptorTypeOnlyOneConstructor" xml:space="preserve">
-    <value>Must only contain a single constructor.</value>
+  <data name="AdapterDescriptorTypeConstructorCountMessageFormat" xml:space="preserve">
+    <value>Adapter type {0} should only have {1} constructor(s)</value>
   </data>
-  <data name="AdapterDescriptorTypeTitle" xml:space="preserve">
-    <value>Adapter descriptor must provide original type and abstraction type</value>
+  <data name="AdapterDescriptorTypeConstructorCountTitle" xml:space="preserve">
+    <value>Adapter types must have correct constructor count</value>
   </data>
-  <data name="AdapterDescriptorTypeTwoParameters" xml:space="preserve">
-    <value>Adapter descriptor constructor must have two parameters.</value>
+  <data name="AdapterDescriptorTypeParameterCountDescription" xml:space="preserve">
+    <value>Adapter attribute constructors must have correct parameter count.</value>
+  </data>
+  <data name="AdapterDescriptorTypeParameterCountMessageFormat" xml:space="preserve">
+    <value>Adapter attribute {0} constructor must have {1} parameter(s)</value>
+  </data>
+  <data name="AdapterDescriptorTypeParameterCountTitle" xml:space="preserve">
+    <value>Adapter attribute constructors must have correct parameter count</value>
+  </data>
+  <data name="AdapterDescriptorTypeParameterDescription" xml:space="preserve">
+    <value>Adapter attributes must have correct constructor parameter.</value>
+  </data>
+  <data name="AdapterDescriptorTypeParameterMessageFormat" xml:space="preserve">
+    <value>Adapter attribute {0} parameter should be of type {1}</value>
+  </data>
+  <data name="AdapterDescriptorTypeParameterTitle" xml:space="preserve">
+    <value>Adapter attributes must have correct constructor parameter</value>
   </data>
   <data name="AdapterRefactorDescription" xml:space="preserve">
     <value>Refactor usage to another type.</value>
