--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
@@ -171,6 +171,15 @@
   <data name="AdapterDescriptorTypeParameterTitle" xml:space="preserve">
     <value>Adapter attributes must have correct constructor parameter</value>
   </data>
+  <data name="AdapterFactoryMustExistDescription" xml:space="preserve">
+    <value>Specified adapter factory must exist.</value>
+  </data>
+  <data name="AdapterFactoryMustExistMessageFormat" xml:space="preserve">
+    <value>Specified adapter factory method {0} on type {1} does not exist</value>
+  </data>
+  <data name="AdapterFactoryMustExistTitle" xml:space="preserve">
+    <value>Specified adapter factory must exist</value>
+  </data>
   <data name="AdapterRefactorDescription" xml:space="preserve">
     <value>Refactor usage to another type.</value>
   </data>
