feat: add static method mapping

--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes/CodeFixResources.resx
@@ -178,4 +178,7 @@
   <data name="AdapterDefinitionTitle" xml:space="preserve">
     <value>Create abstraction for definition</value>
   </data>
+  <data name="AdapterStaticMemberTitle" xml:space="preserve">
+    <value>Redirect static member access to alternate member</value>
+  </data>
 </root>
