--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Resources.resx
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
+  <!--
+    Microsoft ResX Schema
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -132,8 +132,8 @@
   <data name="AdapterCallFactoryMessageFormat" xml:space="preserve">
     <value>Call factory method to convert {0} to {1}</value>
   </data>
-  <data name="AdapterDefinitionTitle" xml:space="preserve">
-    <value>Adapter definition</value>
+  <data name="AdapterCallFactoryTitle" xml:space="preserve">
+    <value>Call factory method</value>
   </data>
   <data name="AdapterDefinitionDescription" xml:space="preserve">
     <value>Adapter definition.</value>
@@ -141,8 +141,8 @@
   <data name="AdapterDefinitionMessageFormat" xml:space="preserve">
     <value>Adapter definition for {0}</value>
   </data>
-  <data name="AdapterCallFactoryTitle" xml:space="preserve">
-    <value>Call factory method</value>
+  <data name="AdapterDefinitionTitle" xml:space="preserve">
+    <value>Adapter definition</value>
   </data>
   <data name="AdapterDescriptorTypeAttributeDescription" xml:space="preserve">
     <value>Adapter types must be attributes.</value>
@@ -206,6 +206,15 @@
   </data>
   <data name="AdapterRefactorTitle" xml:space="preserve">
     <value>Refactor usage of type to another type</value>
+  </data>
+  <data name="AdapterStaticMemberDescription" xml:space="preserve">
+    <value>Redirect static member access to alternate member.</value>
+  </data>
+  <data name="AdapterStaticMemberMessageFormat" xml:space="preserve">
+    <value>Change call from {0} to {1}</value>
+  </data>
+  <data name="AdapterStaticMemberTitle" xml:space="preserve">
+    <value>Redirect static member access to alternate member</value>
   </data>
   <data name="ApiAlertGenericDescription" xml:space="preserve">
     <value>This type is not supported on .NET Core/.NET 5+ and should be replaced with a modern equivalent.</value>
